--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <img src="img/spons/2.svg" alt="Sponsor 2">
                     </div>
                     <div class="sponsor-item">
-                        <img src="img/spons/3.svg" alt="Sponsor 3">
+                        <img src=img/spons/3.svg" alt="Sponsor 3">
                     </div>
                     <div class="sponsor-item">
                         <img src="img/spons/4.svg" alt="Sponsor 4">
