--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
             <div class="sponsors-container">
                 <div class="sponsors">
                     <div class="sponsor-item">
-                        <img src="img/spons/1.svg" alt="Sponsor 1">
+                        <img src="spons/1.svg" alt="Sponsor 1">
                     </div>
                     <div class="sponsor-item">
-                        <img src="img/spons/2.svg" alt="Sponsor 2">
+                        <img src="spons/2.svg" alt="Sponsor 2">
                     </div>
                     <div class="sponsor-item">
-                        <img src=img/spons/3.svg" alt="Sponsor 3">
+                        <img src="spons/3.svg alt="Sponsor 3">
                     </div>
                     <div class="sponsor-item">
-                        <img src="img/spons/4.svg" alt="Sponsor 4">
+                        <img src="spons/4.svg" alt="Sponsor 4">
                     </div>
                     <!-- Duplicate untuk efek infinite scroll -->
                     <div class="sponsor-item">
