--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <img src="/img/spons/1.svg" alt="Voyager Logo" class="nav-logo">
+            <img src="spons/1.svg" alt="Voyager Logo" class="nav-logo">
 
             <div class="nav-links">
                 <a href="#home">Home</a>
@@ -45,16 +45,16 @@
                     </div>
                     <!-- Duplicate untuk efek infinite scroll -->
                     <div class="sponsor-item">
-                        <img src="img/spons/1.svg" alt="Sponsor 1">
+                        <img src="spons/1.svg" alt="Sponsor 1">
                     </div>
                     <div class="sponsor-item">
-                        <img src="img/spons/2.svg" alt="Sponsor 2">
+                        <img src="spons/2.svg" alt="Sponsor 2">
                     </div>
                     <div class="sponsor-item">
-                        <img src="img/spons/3.svg" alt="Sponsor 3">
+                        <img src="spons/3.svg" alt="Sponsor 3">
                     </div>
                     <div class="sponsor-item">
-                        <img src="img/spons/4.svg" alt="Sponsor 4">
+                        <img src="spons/4.svg" alt="Sponsor 4">
                     </div>
                 </div>
             </div>
@@ -265,14 +265,14 @@
     <!-- New Featured Photos -->
     <div class="featured-photos">
         <div class="featured-photo">
-            <img src="img/efa/fea (1).png" alt="" class="featured-img">
+            <img src="efa/fea (1).png" alt="" class="featured-img">
             <div class="featured-overlay">
                 <h3>s</h3>
                 <p>r</p>
             </div>
         </div>
         <div class="featured-photo">
-            <img src="img/efa/fea (2).png" alt="Featured Photo 2" class="featured-img">
+            <img src="efa/fea (2).png" alt="Featured Photo 2" class="featured-img">
             <div class="featured-overlay">
                 <h3></h3>
                 <p></p>
@@ -294,28 +294,28 @@
                 </div>
             </div>
             <div class="banner-slide">
-                <img src="img/banner/2.png" alt="Gallery Banner 2">
+                <img src="banner/2.png" alt="Gallery Banner 2">
                 <div class="banner-content">
                     <h3>Just Being Social</h3>
                     <p>Iya.</p>
                 </div>
             </div>
             <div class="banner-slide">
-                <img src="img/banner/3.png" alt="Gallery ">
+                <img src="banner/3.png" alt="Gallery ">
                 <div class="banner-content">
                     <h3>Desert</h3>
                     <p>Perburuan</p>
                 </div>
             </div>
             <div class="banner-slide">
-                <img src="img/banner/4.png" alt="Gallery Banner 4">
+                <img src="banner/4.png" alt="Gallery Banner 4">
                 <div class="banner-content">
                     <h3>Behavior</h3>
                     <p>Behavior</p>
                 </div>
             </div>
             <div class="banner-slide">
-                <img src="img/banner/5.jpg" alt="Gallery Banner 5">
+                <img src="banner/5.jpg" alt="Gallery Banner 5">
                 <div class="banner-content">
                     <h3>School Spirit</h3>
                     <p>United we stand</p>
@@ -344,11 +344,11 @@
     <div class="gallery-grid">
         <!-- Academic (6 Photos) -->
 <div class="gallery-item landscape" data-genre="academic">
-    <img src="img/aca/1.png" alt="Study Session">
+    <img src="aca/1.png" alt="Study Session">
     <div class="item-overlay"><h4>Study Session</h4><p>Preparing for exams</p></div>
 </div>
 <div class="gallery-item landscape" data-genre="academic">
-    <img src="img/aca/2.png" alt="Library Time">
+    <img src="aca/2.png" alt="Library Time">
     <div class="item-overlay"><h4>Korean Time</h4><p>learn korean language</p></div>
 </div>
 <div class="gallery-item landscape" data-genre="academic">
@@ -371,11 +371,11 @@
 <!-- Arts (6 Photos) -->
  
 <div class="gallery-item landscape" data-genre="arts">
-    <img src="/img/arts/1.png" alt="Wayang">
+    <img src="arts/1.png" alt="Wayang">
     <div class="item-overlay"><h4>Wayang</h4><p>Face Painting</p></div>
 </div>
 <div class="gallery-item landscape" data-genre="arts">
-    <img src="img/arts/2.png" alt="Art Showcase">
+    <img src="arts/2.png" alt="Art Showcase">
     <div class="item-overlay">
         <h4>Rawr</h4>
         <p>FP</p>
@@ -427,27 +427,27 @@
 
     <!-- Social (6 Photos) -->
     <div class="gallery-item landscape" data-genre="social">
-        <img src="img/socis/3.png" alt="Class Party">
+        <img src="socis/3.png" alt="Class Party">
         <div class="item-overlay"><h4>Man</h4><p>Integrity</p></div>
     </div>
     <div class="gallery-item landscape" data-genre="social">
-        <img src="img/socis/1.png" alt="Field Trip">
+        <img src="socis/1.png" alt="Field Trip">
         <div class="item-overlay"><h4>Pramuka</h4><p>Learning outside</p></div>
     </div>
     <div class="gallery-item landscape" data-genre="social">
-        <img src="img/socis/2.png" alt="Community Service">
+        <img src="socis/2.png" alt="Community Service">
         <div class="item-overlay"><h4>Pramuka</h4><p>Giving back to society</p></div>
     </div>
     <div class="gallery-item landscape" data-genre="social">
-        <img src="img/socis/4.png" alt="Club Meeting">
+        <img src="socis/4.png" alt="Club Meeting">
         <div class="item-overlay"><h4>Heros Day</h4><p>Celebrating</p></div>
     </div>
     <div class="gallery-item landscape" data-genre="social">
-        <img src="img/socis/5.png" alt="School Festival">
+        <img src="socis/5.png" alt="School Festival">
         <div class="item-overlay"><h4>🙏</h4><p>⭐</p></div>
     </div>
     <div class="gallery-item landscape" data-genre="social">
-        <img src="img/socis/socis.png" alt="Memories">
+        <img src="socis/socis.png" alt="Memories">
         <div class="item-overlay"><h4>Memories</h4><p>Capture momen</p></div>
     </div>
 </div><!-- Close gallery-grid -->
@@ -474,7 +474,7 @@
         <!-- Kuznetsov Fleet -->
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cowok/briyan.png" alt="Briyan Hudson">
+                <img src="cowok/briyan.png" alt="Briyan Hudson">
                 <div class="header-info">
                     <p>Briyan Hudson</p>
                     <p>Route Planning</p>
@@ -493,7 +493,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cewe/CINTA.png" alt="Cinta Magellan">
+                <img src="cewe/CINTA.png" alt="Cinta Magellan">
                 <div class="header-info">
                     <p>Cinta Magellan</p>
                     <p>Weather Analysis</p>
@@ -512,7 +512,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cowok/faisal.png" alt="Faisal Cabot">
+                <img src="cowok/faisal.png" alt="Faisal Cabot">
                 <div class="header-info">
                     <p>Faisal Cabot</p>
                     <p>Equipment Maintenance</p>
@@ -531,7 +531,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cewe/HESA.png" alt="Hesa Drake">
+                <img src="cewe/HESA.png" alt="Hesa Drake">
                 <div class="header-info">
                     <p>Hesa Drake</p>
                     <p>Communications</p>
@@ -550,7 +550,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cowok/irgi.png" alt="Irgi Cartier">
+                <img src="/cowok/irgi.png" alt="Irgi Cartier">
                 <div class="header-info">
                     <p>Irgi Cartier</p>
                     <p>Safety Officer</p>
@@ -569,7 +569,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cewe/ISMA.png" alt="Isma Zheng He">
+                <img src="cewe/ISMA.png" alt="Isma Zheng He">
                 <div class="header-info">
                     <p>Isma Zheng He</p>
                     <p>Data Analysis</p>
@@ -588,7 +588,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cowok/angga.png" alt="Angga Dampier">
+                <img src="cowok/angga.png" alt="Angga Dampier">
                 <div class="header-info">
                     <p>Angga Dampier</p>
                     <p>Environmental Monitor</p>
@@ -607,7 +607,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cowok/reyhan.png" alt="Reyhan Behring">
+                <img src="cowok/reyhan.png" alt="Reyhan Behring">
                 <div class="header-info">
                     <p>Reyhan Behring</p>
                     <p>Equipment Operator</p>
@@ -626,7 +626,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cewe/NADZHIRA.png" alt="Nadhzira Martadinata">
+                <img src="cewe/NADZHIRA.png" alt="Nadhzira Martadinata">
                 <div class="header-info">
                     <p>Nadhzira Martadinata</p>
                     <p>Training Coordinator</p>
@@ -645,7 +645,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cewe/NURUL.png" alt="Nurul Tasman">
+                <img src="cewe/NURUL.png" alt="Nurul Tasman">
                 <div class="header-info">
                     <p>Nurul Tasman</p>
                     <p>Documentation</p>
@@ -664,7 +664,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cewe/SALSABILA.png" alt="Salsabila Tokugawa">
+                <img src="cewe/SALSABILA.png" alt="Salsabila Tokugawa">
                 <div class="header-info">
                     <p>Salsabila Tokugawa</p>
                     <p>Quality Control</p>
@@ -683,7 +683,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="img/cowok/yadi.png" alt="Yadi Serrano">
+                <img src="cowok/yadi.png" alt="Yadi Serrano">
                 <div class="header-info">
                     <p>Yadi Serrano</p>
                     <p>Logistics</p>
@@ -703,7 +703,7 @@
         <!-- Nimitz Fleet -->
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cewe/EUIS.png" alt="Euis Keumalahayati">
+                <img src="cewe/EUIS.png" alt="Euis Keumalahayati">
                 <div class="header-info">
                     <p>Euis Keumalahayati</p>
                     <p>Route Planning</p>
@@ -722,7 +722,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cewe/FITRIA.png" alt="Fitriya Hudson">
+                <img src="cewe/FITRIA.png" alt="Fitriya Hudson">
                 <div class="header-info">
                     <p>Fitria Hudson</p>
                     <p>Weather Analysis</p>
@@ -741,7 +741,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cowok/haikal.png" alt="Haikal Al-Mahri">
+                <img src="cowok/haikal.png" alt="Haikal Al-Mahri">
                 <div class="header-info">
                     <p>Haikal Al-Mahri</p>
                     <p>Equipment Maintenance</p>
@@ -779,7 +779,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cewe/LUNA.png" alt="Luna Bouvet">
+                <img src="cewe/LUNA.png" alt="Luna Bouvet">
                 <div class="header-info">
                     <p>Luna Bouvet</p>
                     <p>Safety Officer</p>
@@ -798,7 +798,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cowok/rama.png" alt="Ramadhan Ibn Majid">
+                <img src="cowok/rama.png" alt="Ramadhan Ibn Majid">
                 <div class="header-info">
                     <p>Ramadhan Ibn Majid</p>
                     <p>Data Analysis</p>
@@ -817,7 +817,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cowok/rehan.png" alt="Rehan Ibn Battuta">
+                <img src="cowok/rehan.png" alt="Rehan Ibn Battuta">
                 <div class="header-info">
                     <p>Rehan Ibn Battuta</p>
                     <p>Environmental Monitor</p>
@@ -836,7 +836,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cewe/NAZLIA.png" alt="Nazlia Al-Masudi">
+                <img src="cewe/NAZLIA.png" alt="Nazlia Al-Masudi">
                 <div class="header-info">
                     <p>Nazlia Al-Masudi</p>
                     <p>Equipment Operator</p>
@@ -855,7 +855,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cewe/NOVI.png" alt="Novi Reis">
+                <img src="cewe/NOVI.png" alt="Novi Reis">
                 <div class="header-info">
                     <p>Novi Reis</p>
                     <p>Training Coordinator</p>
@@ -874,7 +874,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cowok/alam.png" alt="Rizki Tasman">
+                <img src="cowok/alam.png" alt="Rizki Tasman">
                 <div class="header-info">
                     <p>Rizki Tasman</p>
                     <p>Documentation</p>
@@ -893,7 +893,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cewe/SYAIRA.png" alt="Syaira Krusenstern">
+                <img src="cewe/SYAIRA.png" alt="Syaira Krusenstern">
                 <div class="header-info">
                     <p>Syaira Krusenstern</p>
                     <p>Quality Control</p>
@@ -912,7 +912,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cowok/wildan.png" alt="Wildan Kerguelen">
+                <img src="cowok/wildan.png" alt="Wildan Kerguelen">
                 <div class="header-info">
                     <p>Wildan Kerguelen</p>
                     <p>Logistics</p>
@@ -932,7 +932,7 @@
         <!-- Elizabeth Fleet -->
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cewe/MISHA.png" alt="Misha Raleigh">
+                <img src="cewe/MISHA.png" alt="Misha Raleigh">
                 <div class="header-info">
                     <p>Misha Raleigh</p>
                     <p>Route Planning</p>
@@ -951,7 +951,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cowok/naufal.png" alt="Naufal Nansen">
+                <img src="cowok/naufal.png" alt="Naufal Nansen">
                 <div class="header-info">
                     <p>Naufal Nansen</p>
                     <p>Weather Analysis</p>
@@ -970,7 +970,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cewe/NISA.png" alt="Nisa Dias">
+                <img src="cewe/NISA.png" alt="Nisa Dias">
                 <div class="header-info">
                     <p>Nisa Dias</p>
                     <p>Equipment Maintenance</p>
@@ -989,7 +989,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cewe/NUR.png" alt="Nur Allisya Grenville">
+                <img src="cewe/NUR.png" alt="Nur Allisya Grenville">
                 <div class="header-info">
                     <p>Nur Allisya Grenville</p>
                     <p>Communications</p>
@@ -1008,7 +1008,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cewe/NURLAILA.png" alt="Nurlaila Cabral">
+                <img src="cewe/NURLAILA.png" alt="Nurlaila Cabral">
                 <div class="header-info">
                     <p>Nurlaila Cabral</p>
                     <p>Safety Officer</p>
@@ -1027,7 +1027,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="/mg/cewe/PUTRI.png" alt="Putri Pizzaro">
+                <img src="cewe/PUTRI.png" alt="Putri Pizzaro">
                 <div class="header-info">
                     <p>Putri Pizzaro</p>
                     <p>Data Analysis</p>
@@ -1046,7 +1046,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cewe/RAISSA.png" alt="Raissa Hawkins">
+                <img src="cewe/RAISSA.png" alt="Raissa Hawkins">
                 <div class="header-info">
                     <p>Raissa Hawkins</p>
                     <p>Environmental Monitor</p>
@@ -1065,7 +1065,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cowok/rauf.png" alt="Rauf Cartier">
+                <img src="cowok/rauf.png" alt="Rauf Cartier">
                 <div class="header-info">
                     <p>Rauf Cartier</p>
                     <p>Equipment Operator</p>
@@ -1084,7 +1084,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cowok/ridwan.png" alt="Ridwan Chirikov">
+                <img src="cowok/ridwan.png" alt="Ridwan Chirikov">
                 <div class="header-info">
                     <p>Ridwan Chirikov</p>
                     <p>Training Coordinator</p>
@@ -1103,7 +1103,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cewe/RAISSA (2).png" alt="Risma Hasekura">
+                <img src="cewe/RAISSA (2).png" alt="Risma Hasekura">
                 <div class="header-info">
                     <p>Risma Hasekura</p>
                     <p>Documentation</p>
@@ -1122,7 +1122,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cewe/SALWA.png" alt="Salwa Baffin">
+                <img src="cewe/SALWA.png" alt="Salwa Baffin">
                 <div class="header-info">
                     <p>Salwa Baffin</p>
                     <p>Quality Control</p>
@@ -1141,7 +1141,7 @@
 
         <div class="crew-card" data-fleet="elizabeth">
             <div class="card-header">
-                <img src="img/cewe/ZAHRA.png" alt="Zahra Sun-sin">
+                <img src="cewe/ZAHRA.png" alt="Zahra Sun-sin">
                 <div class="header-info">
                     <p>Zahra Sun-sin</p>
                     <p>Logistics</p>
