--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 
         <div class="crew-card" data-fleet="kuznetsov">
             <div class="card-header">
-                <img src="/cowok/irgi.png" alt="Irgi Cartier">
+                <img src="cowok/irgi.png" alt="Irgi Cartier">
                 <div class="header-info">
                     <p>Irgi Cartier</p>
                     <p>Safety Officer</p>
@@ -760,7 +760,7 @@
 
         <div class="crew-card" data-fleet="nimitz">
             <div class="card-header">
-                <img src="img/cewe/IRSYA.png" alt="Irsyaviera Vasco">
+                <img src="cewe/IRSYA.png" alt="Irsyaviera Vasco">
                 <div class="header-info">
                     <p>Irsyaviera Vasco</p>
                     <p>Communications</p>
