--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <div class="compact-banner">
         <div class="banner-wrapper">
             <div class="banner-slide">
-                <img src="img/banner/1.png" alt="Gallery Banner 1">
+                <img src="banner/1.png" alt="Gallery Banner 1">
                 <div class="banner-content">
                     <h3>Korean</h3>
                     <p>With Mr. Bae</p>
