--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <img src="spons/2.svg" alt="Sponsor 2">
                     </div>
                     <div class="sponsor-item">
-                        <img src="spons/3.svg alt="Sponsor 3">
+                        <img src="spons/3.svg" alt="Sponsor 3">
                     </div>
                     <div class="sponsor-item">
                         <img src="spons/4.svg" alt="Sponsor 4">
@@ -399,7 +399,7 @@
     <div class="item-overlay"><h4>Coming soon</h4><p>Capturing moments</p></div>
 </div>
 <div class="gallery-item landscape" data-genre="sports">
-    <img src="img/spr/aa.png" alt="Basketball Match">
+    <img src="spr/aa.png" alt="Basketball Match">
     <div class="item-overlay"><h4>🌊</h4><p>Team spirit in action</p></div>
 </div>
 <div class="gallery-item landscape" data-genre="sports">
