--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <section id="home" class="hero">
         <div class="hero-content">
-            <<h1 class="title" style="text-align: center;">
+  <h1 class="title" style="text-align: center;">
   <span class="main-title">Sailing Beyond Boundaries</span>
   <span class="subtitle">Discovering New Horizons.</span>
 </h1>
